[project]
name = "performance_monitor"
version = "0.1.0"
description = "performance-monitor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
performance_monitor = "performance_monitor.main:run"
run_crew = "performance_monitor.main:run"
train = "performance_monitor.main:train"
replay = "performance_monitor.main:replay"
test = "performance_monitor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
